
   Statistic class
      1) Removed empty file in src/basic named Statistic.h - not needed

   Timer class
      1) addToTimerList() -- prints an error message if unable to add a
         new timer to the list.

--------------------------------------------------------------------------------
basicGL

   ColorRotary class
      1) General cleanup - initialized some data previously uninitialized

--------------------------------------------------------------------------------
dis

   NetIO class
      1) Add the initialization of member variables 'siteId', 'appID' and
      'exerciseID' (bug fix); and added the initData() function.

   NetIOMunitionDetonation, NetIOPlatforms and NetIOWeaponFire
      1) Set a few uninitialized fields within PDUs


--------------------------------------------------------------------------------
gui-glut

   GlutDisplay class
      1) printSelectBuffer() -- restructured code for better readability.

--------------------------------------------------------------------------------
otw

   OtwCigiCl class
      1) Removed unused variables to eliminate warnings

--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   General
      1) Updated AirVehicle, GroundVehicle, LifeForms and Player so that networked
         players "reset" properly. 

   Message class
      1) General cleanup of the code
         -- added 'const', as needed
         -- getSenderName() and getDestNames() now return 'const' pointers

   Player class
      1) Added "initVelocityKts" so that initial velocity can be specified
         in knots

   Steerpoint class
      1) Updated serialize() method so that more steerpoint information is
         save when serialized

--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
